--- a/client/package.json
+++ b/client/package.json
@@ -3,13 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-redux": "^7.1.3",
-    "react-router-dom": "^5.1.2",
-    "redux": "^4.0.5",
-    "redux-saga": "^1.1.3",
-    "typescript": "~3.7.2",
+    "@material-ui/core": "^4.9.5",
+    "@material-ui/icons": "^4.9.1",
     "typescript-fsa": "^3.0.0"
   },
   "devDependencies": {
@@ -30,8 +25,11 @@
     "gulp-notify": "^3.2.0",
     "gulp-plumber": "^1.2.1",
     "source-map-loader": "^0.2.4",
+    "stats-webpack-plugin": "^0.7.0",
     "ts-loader": "^6.2.1",
+    "typescript": "^3.8.3",
     "webpack": "^4.41.5",
+    "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.3.10",
     "webpack-stream": "^5.2.1"
   }
