--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,6 +1,11 @@
 {
     "compilerOptions": {
         "target": "es5",
+        "lib": [
+            "dom",
+            "dom.iterable",
+            "es6"
+        ],
         "sourceMap": true,
         "moduleResolution": "node",
         "strict": true,
